# scorched_earth_study

./: README.md  requirements.txt  setup.cfg  tox.ini
scorched_earth/: game_constants.py  game_core.py  game_manager.py  game_menu.py  start_game.py
scorched_earth/sprites/: blast.py  bullet.py  tank.py  terrain.py
