[metadata]
name = scorched_earth
summary = pygame demo project to give easy tasks to my son.
description-file =
    README.md
author = Lajos Katona
python-requires = >=3.10
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    scorched_earth
